# hw_python_web_seven

./: .gitignore  README.md  main.py  pyproject.toml
exercize/: core_example.py  orm_async_example.py  orm_example.py  orm_new_api_example.py
migrations/versions/: 82e33e8b1c23_init.py
src/: db.py
